@@ -1,3 +1,7 @@
+2016-12-18 (0.12.9)
+	ANDROID Allow input of special characters
+	Fix compile warnings from clang
+
 2016-10-30 (0.12.9)
 	Removed debugging output from RUN (windows build)
 
